--- a/plugins/automation/src/main/res/values/strings.xml
+++ b/plugins/automation/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="automation_missing_task_name">Please enter a task name.</string>
     <string name="automation_missing_trigger">Please specify at least one trigger.</string>
     <string name="automation_missing_action">Please specify at least one action.</string>
+    <string name="exportsettings_message">Settings Export: %1$s</string>
+    <string name="export_settings_short">Text in treatments:</string>
     <string name="alarm_message">Alarm: %1$s</string>
     <string name="alarm_short">Alarm:</string>
     <string name="message_short">Msg:</string>
@@ -90,7 +92,9 @@
     <string name="triggerSensorAgeLabel">Sensor age</string>
     <string name="triggerSensorAgeDesc">Sensor age %1$s %2$.1f hour</string>
     <string name="triggerCannulaAgeLabel">Cannula age</string>
-    <string name="triggerCannulaAgeDesc">Cannula age %1$s %2$.1f hour</string>    
+    <string name="triggerCannulaAgeDesc">Cannula age %1$s %2$.1f hour</string>
+    <string name="triggerPodChangeLabel">Pod activation</string>
+    <string name="triggerPodChangeDesc">Pod activated</string>
     <string name="triggerInsulinAgeLabel">Insulin age</string>
     <string name="triggerInsulinAgeDesc">Insulin age %1$s %2$.1f hour</string>
     <string name="triggerPumpBatteryAgeLabel">Pump battery age</string>
