--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -156,6 +156,7 @@
     <string name="pref_simplify_ui_sum">Only show time and BG</string>
     <string name="pref_vibrate_hourly">Vibrate hourly</string>
     <string name="pref_show_weeknumber">Show Week number</string>
+    <string name="pref_include_external">Include external views in template</string>
     <string name="custom_pref_show_seconds">Show seconds</string>
     <string name="digitalstyle_pref_your_style">Your style:</string>
     <string name="digitalstyle_style_none">no style</string>
@@ -237,6 +238,7 @@
     <string name="key_high_color" translatable="false">highcolor</string>
     <string name="key_mid_color" translatable="false">midcolor</string>
     <string name="key_low_color" translatable="false">lowcolor</string>
+    <string name="key_include_external" translatable="false">include_external</string>
     <string name="increment">increment</string>
     <string name="decrement">decrement</string>
     <string name="abbreviation_average">avg</string>
