New Crowdin updates (#3509)
* New translations strings.xml (Russian)

* New translations strings.xml (French)

* New translations strings.xml (Romanian)

* New translations strings.xml (French)

* New translations strings.xml (Spanish)

* New translations strings.xml (Arabic)

* New translations strings.xml (Bulgarian)

* New translations strings.xml (Catalan)

* New translations strings.xml (Czech)

* New translations strings.xml (Danish)

* New translations strings.xml (German)

* New translations strings.xml (Greek)

* New translations strings.xml (Hebrew)

* New translations strings.xml (Hungarian)

* New translations strings.xml (Italian)

* New translations strings.xml (Korean)

* New translations strings.xml (Lithuanian)

* New translations strings.xml (Dutch)

* New translations strings.xml (Polish)

* New translations strings.xml (Portuguese)

* New translations strings.xml (Russian)

* New translations strings.xml (Slovak)

* New translations strings.xml (Swedish)

* New translations strings.xml (Turkish)

* New translations strings.xml (Ukrainian)

* New translations strings.xml (Chinese Simplified)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Portuguese, Brazilian)

* New translations strings.xml (Croatian)

* New translations strings.xml (Norwegian Bokmal)

* New translations strings.xml (Serbian (Latin))

* Update source file protection.xml

* Update source file strings.xml

* Update source file strings.xml

* Update source file strings.xml

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translations strings.xml (Chinese Traditional)

* New translatio

--- a/core/ui/src/main/res/values-cs-rCZ/strings.xml
+++ b/core/ui/src/main/res/values-cs-rCZ/strings.xml
@@ -89,6 +89,7 @@
     <string name="removerecord">Odstranit záznam</string>
     <string name="loopisdisabled">Smyčka je zakázána</string>
     <string name="alarm">Alarm</string>
+    <string name="exportsettings">Export nastavení</string>
     <string name="disableloop">Zakázat smyčku</string>
     <string name="enableloop">Povolit smyčku</string>
     <string name="resumeloop">Obnovit smyčku</string>
@@ -207,10 +208,12 @@
     <string name="careportal_bgcheck">Kontrola glykémie</string>
     <string name="careportal_mbg">Ruční glykémie nebo kalibrace</string>
     <string name="careportal_announcement">Oznámení</string>
+    <string name="careportal_settings_export">Export nastavení</string>
     <string name="careportal_note">Poznámka</string>
     <string name="careportal_question">Otázka</string>
     <string name="careportal_exercise">Cvičení</string>
     <string name="careportal_announcement_message">Oznámení: %1$s</string>
+    <string name="careportal_settings_export_message">Export nastavení: %1$s</string>
     <string name="careportal_note_message">Poznámka : %1$s</string>
     <string name="careportal_question_message">Otázka: %1$s</string>
     <string name="careportal_exercise_message">Cvičení : %1$s</string>
@@ -243,6 +246,7 @@
     <string name="activity">Aktivita</string>
     <string name="wear">Wear</string>
     <string name="automation">Automatizace</string>
+    <string name="settingsexport">Export nastavení</string>
     <string name="custom">Volitelný</string>
     <string name="loop">Smyčka</string>
     <string name="ns">NS</string>
@@ -506,6 +510,19 @@
     <string name="close">Zavřít</string>
     <!-- TwoMessagesDialog -->
     <string name="password_preferences_decrypt_prompt">Zobrazí se výzva k zadání hlavního hesla, které bude použito k dešifrování importovaných předvoleb.</string>
+    <!-- <unattended_export> -->
+    <string name="export_ok">OK</string>
+    <string name="export_warning">Varování</string>
+    <string name="export_expired">Vypršelo</string>
+    <string name="export_disabled">Zakázáno</string>
+    <string name="export_failed">Chyba</string>
+    <string name="export_alert">VÝSTRAHA</string>
+    <!-- <unattended_export result messages> -->
+    <string name="export_result_message_exported">Nastavení exportováno</string>
+    <string name="export_result_message_failed">Nastavení NEJSOU správně exportována!</string>
+    <string name="export_result_message_about_to_expire">Nastavení exportováno: heslo brzy vyprší. Exportujte ručně a (znovu) zadejte heslo.</string>
+    <string name="export_result_message_expired">Export nastavení zrušen: heslo vypršelo. Exportujte ručně a (znovu) zadejte heslo!</string>
+    <string name="export_result_message_disabled">Varování (automatizace): Není povolen export nastavení!</string>
     <!-- NumberPicker -->
     <string name="a11y_min_button_description">snížení %1$s o %2$s</string>
     <string name="a11y_plus_button_description">zvýšení %1$s o %2$s</string>
