--- a/core/ui/src/main/res/values-zh-rTW/strings.xml
+++ b/core/ui/src/main/res/values-zh-rTW/strings.xml
@@ -23,7 +23,7 @@
     <string name="mgdl">mg/dl</string>
     <string name="mmol">mmol/l</string>
     <string name="save">儲存</string>
-    <string name="snooze">延後提醒</string>
+    <string name="snooze">稍後提醒</string>
     <string name="virtual_pump">虛擬幫浦</string>
     <string name="constraints">限制</string>
     <string name="superbolus">超級注射</string>
@@ -86,9 +86,10 @@
     <string name="virtualpump_resultok">確定</string>
     <string name="pump_time_updated">幫浦時間已更新</string>
     <string name="exit">退出</string>
-    <string name="removerecord">移除記錄</string>
+    <string name="removerecord">移除紀錄</string>
     <string name="loopisdisabled">循環已停用</string>
     <string name="alarm">警報</string>
+    <string name="exportsettings">匯出設定</string>
     <string name="disableloop">停用循環</string>
     <string name="enableloop">啟用循環</string>
     <string name="resumeloop">恢復循環</string>
@@ -207,10 +208,12 @@
     <string name="careportal_bgcheck">血糖檢查</string>
     <string name="careportal_mbg">手動血糖或校正</string>
     <string name="careportal_announcement">公告</string>
+    <string name="careportal_settings_export">設定匯出</string>
     <string name="careportal_note">備註</string>
     <string name="careportal_question">問題</string>
     <string name="careportal_exercise">運動</string>
     <string name="careportal_announcement_message">公告：%1$s</string>
+    <string name="careportal_settings_export_message">設定匯出: %1$s</string>
     <string name="careportal_note_message">備註：%1$s</string>
     <string name="careportal_question_message">問題：%1$s</string>
     <string name="careportal_exercise_message">運動：%1$s</string>
@@ -243,10 +246,11 @@
     <string name="activity">活動</string>
     <string name="wear">WearOS手錶</string>
     <string name="automation">自動化</string>
+    <string name="settingsexport">設定匯出</string>
     <string name="custom">自訂</string>
     <string name="loop">循環</string>
     <string name="ns">NS</string>
-    <string name="record">記錄</string>
+    <string name="record">紀錄</string>
     <!--    Command-->
     <string name="connectiontimedout">連線逾時</string>
     <!--    PumpEnactResult-->
@@ -419,13 +423,13 @@
     <string name="info">資訊</string>
     <!-- BolusWizard -->
     <string name="bolus_advisor">注射顧問</string>
-    <string name="bolus_advisor_message">您的血糖過高。建議不要立即用餐，等待血糖恢復正常。您想現在進行修正注射，並提醒您何時用餐嗎？這種情況下不會記錄碳水化合物，當我們提醒您時，您必須再次使用嚮導。</string>
+    <string name="bolus_advisor_message">您的血糖過高。建議不要立即用餐，等待血糖恢復正常。您想現在進行修正注射，並提醒您何時用餐嗎？這種情況下不會紀錄碳水化合物，當我們提醒您時，您必須再次使用嚮導。</string>
     <string name="cobvsiob">COB 對 IOB</string>
     <string name="slowabsorptiondetected"><![CDATA[<font color=\'%1$s\'>!!!!! 偵測到碳水化合物吸收緩慢：%2$d%% 的時間。請再次檢查您的計算。COB 可能被高估，因此可能會導致給予過多的胰島素 (建議取消計算機中的COB後再重新計算)!!!!!</font>]]></string>
     <string name="partialboluswizard">傳送一部分的注射嚮導結果 [%]</string>
     <string name="partialboluswizard_reset_time">舊血糖時間門檻值 [分鐘]</string>
     <string name="bolus_constraint_applied_warn">注射限制已套用：%1$.2f U 至 %2$.2f U</string>
-    <string name="bolus_recorded_only">僅記錄注射（不由幫浦傳送）</string>
+    <string name="bolus_recorded_only">僅紀錄注射（不由幫浦傳送）</string>
     <string name="advisoralarm">當到達用餐時間時提醒我</string>
     <string name="no_action_selected">未選擇任何操作，無事發生</string>
     <string name="carb_equal_zero_no_action">碳水化合物 = 0。未採取任何行動！</string>
@@ -506,6 +510,19 @@
     <string name="close">關閉</string>
     <!-- TwoMessagesDialog -->
     <string name="password_preferences_decrypt_prompt">您將被要求輸入主密碼，這是解密匯入偏好設定所需的。</string>
+    <!-- <unattended_export> -->
+    <string name="export_ok">確定</string>
+    <string name="export_warning">警告</string>
+    <string name="export_expired">過期</string>
+    <string name="export_disabled">停用</string>
+    <string name="export_failed">失敗</string>
+    <string name="export_alert">警報</string>
+    <!-- <unattended_export result messages> -->
+    <string name="export_result_message_exported">設定已匯出</string>
+    <string name="export_result_message_failed">設定匯出失敗!</string>
+    <string name="export_result_message_about_to_expire">設定已匯出: 密碼即將過期。請手動匯出並（重新）輸入密碼。</string>
+    <string name="export_result_message_expired">設定匯出已取消: 密碼已過期。請手動匯出並（重新）輸入!</string>
+    <string name="export_result_message_disabled">警告（自動化）: 設定匯出未啟用!</string>
     <!-- NumberPicker -->
     <string name="a11y_min_button_description">將 %1$s 減少 %2$s</string>
     <string name="a11y_plus_button_description">將 %1$s 增加 %2$s</string>
