Wear plugin Add strings for external data

--- a/shared/impl/src/main/res/values/strings.xml
+++ b/shared/impl/src/main/res/values/strings.xml
@@ -7,6 +7,20 @@
     <string name="cwf_comment_freetext2">Free text 2</string>
     <string name="cwf_comment_freetext3">Free text 3</string>
     <string name="cwf_comment_freetext4">Free text 4</string>
+    <string name="cwf_comment_patient_name_ext">Patient Name (from AAPSClient or AAPSClient2)</string>
+    <string name="cwf_comment_iob1_ext">IOB label or IOB Sum if detailed (from AAPSClient or AAPSClient2)</string>
+    <string name="cwf_comment_iob2_ext">IOB Sum or (Bolus_IOB|Basal_IOB) if detailed (from AAPSClient or AAPSClient2)</string>
+    <string name="cwf_comment_cob2_ext">COB value (from AAPSClient or AAPSClient2)</string>
+    <string name="cwf_comment_delta_ext">Short BG delta (from AAPSClient or AAPSClient2)</string>
+    <string name="cwf_comment_avg_delta_ext">Average BG delta (15min) (from AAPSClient or AAPSClient2)</string>
+    <string name="cwf_comment_rig_battery_ext">Global loop battery (%) (from AAPSClient or AAPSClient2)</string>
+    <string name="cwf_comment_basalRate_ext">Basal Rate (from AAPSClient or AAPSClient2)</string>
+    <string name="cwf_comment_bgi_ext">BGI value (from AAPSClient or AAPSClient2)</string>
+    <string name="cwf_comment_status_ext">Status synthesis (from AAPSClient or AAPSClient2)</string>
+    <string name="cwf_comment_loop_ext">Loop status and ago (from AAPSClient or AAPSClient2)</string>
+    <string name="cwf_comment_direction_ext">Direction arrow (from AAPSClient or AAPSClient2)</string>
+    <string name="cwf_comment_timestamp_ext">Mintutes ago for last received BG (from AAPSClient or AAPSClient2)</string>
+    <string name="cwf_comment_sgv_ext">BG value (from AAPSClient or AAPSClient2)</string>
     <string name="cwf_comment_patient_name">Patient Name</string>
     <string name="cwf_comment_iob1">IOB label or IOB Sum if detailed</string>
     <string name="cwf_comment_iob2">IOB Sum or (Bolus_IOB|Basal_IOB) if detailed</string>
