A11 file scoped acess

--- a/core/ui/src/main/res/values/strings.xml
+++ b/core/ui/src/main/res/values/strings.xml
@@ -362,6 +362,7 @@
     <string name="delete_future_treatments">Delete future treatments</string>
     <string name="uel_export_settings">EXPORT SETTINGS</string>
     <string name="uel_import_settings">IMPORT SETTINGS</string>
+    <string name="uel_select_directory">SELECT DIRECTORY</string>
     <string name="uel_reset_databases">RESET DATABASES</string>
     <string name="uel_reset_aps_results">RESET APS RESULTS</string>
     <string name="uel_cleanup_databases">CLEANUP DATABASES</string>
