integrate AAPS directory selection into setup wizard & notifications

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,7 @@
     <string name="sort_label">Sort</string>
     <string name="search">Search</string>
     <string name="simple_mode">Simple mode</string>
+    <string name="select">Select</string>
+    <string name="set">Set</string>
 
 </resources>
